Made cloud ready

--- a/confession-wall/index.html
+++ b/confession-wall/index.html
@@ -36,7 +36,7 @@
 
     <script>
         // Use localhost for now (we will change this when we deploy)
-        const API_URL = "http://localhost:3000/api/confessions";
+        const API_URL = "/api/confessions";
 
         // 1. LOAD MESSAGES ON START
         async function loadMessages() {
